--- a/src/main/resources/META-INF/messages.properties
+++ b/src/main/resources/META-INF/messages.properties
@@ -5,9 +5,13 @@ webmvc.i18n_language_key=
 # 异常信息视图文件参数名称
 webmvc.error_view=
 # 系统默认国际化错误消息KEY
-webmvc.error_default_i18n_key=System busy, Please try again later.
+webmvc.error_default_i18n_key=系统繁忙, 请稍后重试!
+# 请求参数验证无效消息KEY
+webmvc.params_validation_invalid_key=请求参数验证无效
+# 会话已授权(登录)KEY
+webmvc.session_authorized_key=用户已经授权登录
 # 会话过期消息KEY
-webmvc.session_timeout=Not login or session timeout, Login again.
+webmvc.session_timeout=用户未授权登录或会话已过期，请重新登录
 # 控制器请求URL后缀参数名称
 webmvc.request_suffix=
 # 重定向登录URL地址参数名称, 默认值: "login?redirect_url=${redirect_url}"
