优化异常处理逻辑并支持注册异常处理器

--- a/src/main/resources/META-INF/messages.properties
+++ b/src/main/resources/META-INF/messages.properties
@@ -4,6 +4,16 @@ webmvc.i18n_resource_name=
 webmvc.i18n_language_key=
 # 异常信息视图文件参数名称
 webmvc.error_view=
+# 数据版本不匹配消息KEY
+webmvc.data_version_not_match_key=数据版本不匹配
+# 请求的操作被禁止
+webmvc.request_operation_forbidden_key=请求的操作被禁止
+# 请求方法不支持或不正确
+webmvc.request_method_not_allowed_key=请求方法不支持或不正确
+# 请求的资源未授权或无权限
+webmvc.request_resource_unauthorized_key=请求的资源未授权或无权限
+# 访问的资源未找到或不存在
+webmvc.resource_not_found_or_not_exist_key=访问的资源未找到或不存在
 # 系统默认国际化错误消息KEY
 webmvc.error_default_i18n_key=系统繁忙, 请稍后重试!
 # 请求参数验证无效消息KEY
