优化formatView方法逻辑添加ret属性

--- a/src/main/resources/META-INF/messages.properties
+++ b/src/main/resources/META-INF/messages.properties
@@ -28,7 +28,7 @@ webmvc.request_suffix=
 webmvc.redirect_login_url=
 # 允许上传的文件类型验证参数名称
 webmvc.validation_allow_upload_content_types=
-# 验证结果消息模板参数名称, 默认值: "${items}"
+# 验证结果消息模板参数名称, 默认值: "${title}"
 webmvc.validation_template_element=
 # 验证结果消息项模板参数名称, 默认值: "${message}<br>"
 webmvc.validation_template_item=
